<resources>
    <string name="app_name">Oscar Review</string>

    <!-- Text View -->
    <string name="oscar_no_list_text">No Reviews Here</string>

    <!-- Edit Text Hints -->
    <string name="edit_text_nominee_hint">Please enter a nominee here.</string>
    <string name="edit_text_review_hint">Please enter a review here.</string>


    <!-- Button Names -->

    <string name="oscar_send_activity_button">Submit Review</string>


    <!-- Radio Button Names -->

    <string name="radio_button_best_picture">Best Picture</string>
    <string name="radio_button_best_actor">Best Actor</string>
    <string name="radio_button_best_actress">Best Actress</string>
    <string name="radio_button_film_editing">Film Editing</string>
    <string name="radio_button_visual_effects">Visual Effects</string>

    <string name="radio_button_value_picture">film</string>
    <string name="radio_button_value_actor">actor</string>
    <string name="radio_button_value_actress">actress</string>
    <string name="radio_button_value_editing">editing</string>
    <string name="radio_button_value_effects">effects</string>

    <!-- Edit Text Headers -->

    <string name="nominee_header">Enter Nominee</string>
    <string name="review_header">Enter Review</string>

    <!-- View List Headers -->

    <string name="view_list_date">Date: </string>
    <string name="view_list_reviewer">Reviewer: </string>
    <string name="view_list_category">Category: </string>
    <string name="view_list_nominee">Nominee: </string>
    <string name="view_list_review">Review: </string>


    <string name="spinner_text">Select Category: </string>

    <!-- Menu Item Names -->

    <string name="menu_item_list">View Reviews</string>
    <string name="menu_item_preference">Settings</string>
    <string name="menu_item_send">Send Reviews</string>



</resources>
