<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ca.mhowatnait.lab1_oscarreviews.OscarSendActivity"
    android:id="@+id/layout_send_activity"
    >
    <TextView
        android:text="@string/nominee_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="@style/OscarTheme"/>


    <EditText
        android:id="@+id/edit_text_nominee"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"

        />

    <TextView
        android:text="@string/review_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_review"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        />


    <RadioGroup
        android:id="@+id/radio_group_category_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_button_best_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_best_picture"/>
        <RadioButton
            android:id="@+id/radio_button_best_actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_best_actor"/>
        <RadioButton
            android:id="@+id/radio_button_best_actress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_best_actress"/>
        <RadioButton
            android:id="@+id/radio_button_film_editing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_film_editing"/>
        <RadioButton
            android:id="@+id/radio_button_visual_effects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_visual_effects"/>
    </RadioGroup>

    <Button
        android:id="@+id/oscar_send_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/oscar_send_activity_button"
        android:textSize="15sp" />



</LinearLayout>
